refafctor: parameter documentation
