# docs/swagger.json
@@ -201,6 +201,15 @@
                     "Produtos"
                 ],
                 "operationId": "GetProductByGtin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "GTIN do item",
+                        "name": "gtin",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Requisição bem sucedida.",
@@ -233,6 +242,15 @@
                     "Produtos"
                 ],
                 "operationId": "GetProductById",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID do item",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Requisição bem sucedida.",
